Project

General

Profile

Actions

Bug #12182

closed

openssl: NPN may be disabled by OpenSSL configuration

Bug #12182: openssl: NPN may be disabled by OpenSSL configuration

Added by rhenium (Kazuki Yamaguchi) over 10 years ago. Updated over 10 years ago.

Status:
Closed
Assignee:
-
Target version:
-
[ruby-core:74384]

Description

OpenSSL's NPN support can be disabled, and Ruby doesn't work well when it is disabled.

% make test-all TESTS="test/openssl"
...
# Running tests:

[274/358] OpenSSL::TestSSL#test_npn_advertised_protocol_too_long./test/runner.rb: OpenSSL::TestSSL#test_npn_advertised_protocol_too_long: symbol lookup error: /work/ruby-src/.ext/x86_64-linux/openssl.so: undefined symbol: SSL_CTX_set_next_proto_select_cb
uncommon.mk:607: recipe for target 'yes-test-all' failed
make: *** [yes-test-all] Error 127

We should detect that the OpenSSL has NPN support by checking existence of SSL_CTX_set_next_proto_select_cb, not of OPENSSL_NPN_NEGOTIATED.
This is because OPENSSL_NPN_NEGOTIATED macro always exists even if NPN is disabled.

I attached a patch which fixes this.


Files

Actions

Also available in: PDF Atom